Update: Activity service with courseId tracking, OAuth2, Admin features, Email service